# alsatest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3rd/alsa-install/include/alsa/: version.h
3rd/alsa-install/lib/: libasound.la  libatopology.la  libatopology.so.2.0.0
3rd/alsa-install/lib/pkgconfig/: alsa-topology.pc  alsa.pc
